crates/chat-app-server/tests/api/snapshots/api__users__list_users_and_roles.snap
---
source: crates/chat-app-server/tests/api/users.rs
expression: actual
---
{
  "users": [
    {
      "username": "[value varies]",
      "display_name": "Admin User",
      "force_pass_change": true,
      "assigned_role": 2,
      "enabled": true,
      "locked_out": false,
      "failed_attempts": 0,
      "pass_change_date": "[date]"
    },
    {
      "username": "[value varies]",
      "display_name": "Test User",
      "force_pass_change": true,
      "assigned_role": null,
      "enabled": true,
      "locked_out": false,
      "failed_attempts": 0,
      "pass_change_date": "[date]"
    },
    {
      "username": "[value varies]",
      "display_name": "Seed Admin User",
      "force_pass_change": true,
      "assigned_role": 1,
      "enabled": true,
      "locked_out": false,
      "failed_attempts": 0,
      "pass_change_date": "[date]"
    }
  ],
  "roles": [
    {
      "id": 2,
      "name": "Admin"
    },
    {
      "id": 1,
      "name": "SeedAdmin"
    }
  ]
}
